examples/c/error-codes/undefined/UB-FD8-bad-static.output
UB-FD8-bad-static.c:4:5: error: third parameter of 'main' (environment) must be of type 'char **'
int main(int a, char** b, int c){
    ^
1 error generated.
